--- a/URIs.html
+++ b/URIs.html
@@ -5,62 +5,137 @@
     <title>Walmart Schemes</title>
   </head>
   <body>
-    <ul>
-      <li><a href="/^holiday([?]{1}.*)?$/">Holiday</a></li>
-      <li><a href="/^local\-ad\/promotion\/([^\/?]*)([?]{1}.*)?$/">Local Ad</a></li>
-      <li><a href="/^weeklyads\/?(?:[?]{1}.*)?$/">Weekly Ad 1</a></li>
-      <li><a href="/^weeklyads\/([^\/?]+)\/([^\/?]+)\/?(?:[?]{1}.*)?$/">Weekly Ad 2</a></li>
-      <li><a href="/^weeklyads-preview\/([^\/?]+)\/?(?:[?]{1}.*)?$/">Weekly Ad Preview</a></li>
-      <li><a href="/^clearance([?]{1}.*)?$/">Clearance</a></li>
-      <li><a href="/^rollbacks([?]{1}.*)?$/">Rollbacks 1</a></li>
-      <li><a href="/^rollbacks\/([^\/?]*)([?]{1}.*)?$/">Rollbacks 2</a></li>
-      <li><a href="/^search\/([^?]*)([?]{1}.*)?$/">Search</a></li>
-      <li><a href="/^search\-department\/([^\/?]*)\/([^?]*)([?]{1}.*)?$/">Search Department</a></li>
-      <li><a href="/^storeSearch\/([^?]*)([?]{1}.*)?$/">Store Search</a></li>
-      <li><a href="/^walmart://shop$/">Shop</a></li>
-      <li><a href="/^browse\/([^\/?]*)([?]{1}.*)?$/">Browse</a></li>
-      <li><a href="^walmart://shelf/([^?]+)(?:[?]{1}.*)?$">Shelf</a></li>
-      <li><a href="/^ip\/([^\/?]*)([?]{1}.*)?$/">IP</a></li>
-      <li><a href="/^itemStoreAvailability\/([^\/?]*)([?]{1}.*)?$/">Item Store Availability</a></li>
-      <li><a href="/^location\/locate([?]{1}.*)?$/">Location 1</a></li>
-      <li><a href="/^location\/([^\/?]*)([?]{1}.*)?$/">Location 2</a></li>
-      <li><a href="/^store/([0-9]+)$">Stores 0-9</a></li>
-      <li><a href="/^location\/([^\/?]*)\/map([?]{1}.*)?$/">Location Map 1</a></li>
-      <li><a href="/^location\/store\-map([?]{1}.*)?$/">Location Map 2</a></li>
-      <li><a href="/^msco([?]{1}.*)?$/">MSCO</a></li>
-      <li><a href="/^stories([?]{1}.*)?$/">Stories</a></li>
-      <li><a href="/^vod([?]{1}.*)?$/">VOD</a></li>
-      <li><a href="/^ereceipts([?]{1}.*)?$/">EReceipts 1</a></li>
-      <li><a href="^walmart://ereceipts/([^/?]*)([?]{1}.*)?">EReceipts 2</a></li>
-      <li><a href="^walmart://savingscatcher/([^?]+)([?].*)?$">Savings Catcher 1</a></li>
-      <li><a href="^walmart://savingscatcher">Savings Catcher 2</a></li>
-      <li><a href="^walmart://savingscatcher/bluebird/linking/([^?]+)([?]{1}.*)?$">savingscatcher bluebird 1</a></li>
-      <li><a href="^walmart://savingscatcher/bluebird/registration/(.*?)$">savingscatcher bluebird 2</a></li>
-      <li><a href="^walmart:\\/\\/scanner?">Scanner</a></li>
-      <li><a href="/^home([?]{1}.*)?$/">Home</a></li>
-      <li><a href="^walmart:\\/\\/lists?">Lists 1</a></li>
-      <li><a href="^walmart:\\/\\/lists\\/([^\/?]*)\/([^?]*)([?]{1}.*)?$/">Lists 2</a></li>
-      <li><a href="^walmart:\\/\\/shoppingList?">Shopping List</a></li>
-      <li><a href="^walmart://orders([?]{1}.*)?$/">Orders 1</a></li>
-      <li><a href="^walmart://orders/([^/?]*)([?]{1}.*)?">Orders 2</a></li>
-      <li><a href="^walmart://pharmacy/orders/([^/?]+)(?:[?].*)?$">Pharmacy Orders</a></li>
-      <li><a href="^walmart://pharmacy?$">Pharmacy</a></li>
-      <li><a href="^walmart://registry?$">Registry</a></li>
-      <li><a href="^walmart://stores?$">Stores</a></li>
-      <li><a href="^walmart://photo?$">Photos</a></li>
-      <li><a href="^walmart://col/(?:.+/)?([^/?#]+)$")">Collections</a></li>
-      <li><a href="^walmart://tempo\\?(.*?)$">Tempo</a></li>
-      <li><a href="^walmart://expo\\?(.*?)$">Expo</a></li>
-      <li><a href="^walmart://vid\\?(.*?)$"">VID</a></li>
-      <li><a href="^walmart://cid\\?(.*?)$"">CID</a></li>
-      <li><a href="^walmart://financialservices?$">Financial Services</a></li>
-      <li><a href="^walmart://financialservices/transactionhistory?$">Trans. History</a></li>
-      <li><a href="^walmart://scanreceipt?$">Scan Receipt</a></li>
-      <li><a href="^walmart:\\/\\/backtoschool?">Back To School</a></li>
-      <li><a href="^walmart:\/\/deals\/[A-Za-z0-9_]*$">Deals</a></li>
-      <li><a href="/^storemaps/([0-9]+)$">Store Maps</a></li>
-      <li><a href="/^storemaps/seasonal/blackfriday/([0-9]+)$">Maps Black Friday</a></li>
-      <li><a href="/^nextday\/([^\/?]*)([?]{1}.*)?$/">Next Day</a></li>
-    </ul>
+    <a href="walmart://shippingPassBanner">walmart://shippingPassBanner</a>
+    <br>
+    </br>
+    <a href="walmart://holiday">walmart://holiday</a>
+    <br>
+    </br>
+    <a href="walmart://local-ad/promotion">walmart://local-ad/promotion</a>
+    <br>
+    </br>
+    <a href="walmart://weeklyads">walmart://weeklyads</a>
+    <br>
+    </br>
+    <a href="walmart://clearance">walmart://clearance</a>
+    <br>
+    </br>
+    <a href="walmart://rollbacks">walmart://rollbacks</a>
+    <br>
+    </br>
+    <a href="walmart://rollbacks/2280">walmart://rollbacks/2280</a>
+    <br>
+    </br>
+    <a href="walmart://search/Gluten%20Free%20Pizza%0A">walmart://search/Gluten%20Free%20Pizza%0A</a>
+    <br>
+    </br>
+    <a href="walmart://search/Food/Gluten%20Free%20Pizza%0A">walmart://search/Food/Gluten%20Free%20Pizza%0A</a>
+    <br>
+    </br>
+    <a href="walmart://storeSearch/Gluten%20Free%20Pizza%0A">walmart://storeSearch/Gluten%20Free%20Pizza%0A</a>
+    <br>
+    </br>
+    <a href="walmart://shop">walmart://shop</a>
+    <br>
+    </br>
+    <a href="walmart://shop/Electronics">walmart://shop/Electronics</a>
+    <br>
+    </br>
+    <a href="walmart://browse/aHR0cHM6Ly93d3cud2FsbWFydC5jb20">walmart://browse/aHR0cHM6Ly93d3cud2FsbWFydC5jb20</a>
+    <br>
+    </br>vYnJvd3NlL2hvbGlkYXktMjAxOC1zcG9ydHMtJi1vdXRkb29ycy1kZWFscy80MTI1XzU0Njk1Nl80MTI4
+    <a href="walmart://shelf/aHR0cHM6Ly93d3cud2FsbWFydC5jb20v">walmart://shelf/aHR0cHM6Ly93d3cud2FsbWFydC5jb20v</a>
+    <br>
+    </br>YnJvd3NlL2hvbGlkYXktMjAxOC1zcG9ydHMtJi1vdXRkb29ycy1kZWFscy80MTI1XzU0Njk1Nl80MTI4
+    <a href="walmart://ip/101482333">walmart://ip/101482333</a>
+    <br>
+    </br>
+    <a href="walmart://itemStoreAvailability/101482333">walmart://itemStoreAvailability/101482333</a>
+    <br>
+    </br>
+    <a href="walmart://location/locate">walmart://location/locate</a>
+    <br>
+    </br>
+    <a href="walmart://location/2280">walmart://location/2280</a>
+    <br>
+    </br>
+    <a href="walmart://store/2280">walmart://store/2280</a>
+    <br>
+    </br>
+    <a href="walmart://location/2280/map">walmart://location/2280/map</a>
+    <br>
+    </br>
+    <a href="walmart://location/store-map">walmart://location/store-map</a>
+    <br>
+    </br>
+    <a href="walmart://storemaps/2280">walmart://storemaps/2280</a>
+    <br>
+    </br>
+    <a href="walmart://msco">walmart://msco</a>
+    <br>
+    </br>
+    <a href="walmart://stories">walmart://stories</a>
+    <br>
+    </br>
+    <a href="walmart://vod">walmart://vod</a>
+    <br>
+    </br>
+    <a href="walmart://ereceipts">walmart://ereceipts</a>
+    <br>
+    </br>
+    <a href="walmart://savingscatcher">walmart://savingscatcher</a>
+    <br>
+    </br>
+    <a href="walmart://scanner">walmart://scanner</a>
+    <br>
+    </br>
+    <a href="walmart://home">walmart://home</a>
+    <br>
+    </br>
+    <a href="walmart://webview/">walmart://webview/</a>
+    <br>
+    </br>https%3A%2F%2Fwww.mparticle.com
+    <a href="walmart://lists">walmart://lists</a>
+    <br>
+    </br>
+    <a href="walmart://shoppingList">walmart://shoppingList</a>
+    <br>
+    </br>
+    <a href="walmart://orders">walmart://orders</a>
+    <br>
+    </br>
+    <a href="walmart://orders/2891995457725">walmart://orders/2891995457725</a>
+    <br>
+    </br>
+    <a href="walmart://pharmacy">walmart://pharmacy</a>
+    <br>
+    </br>
+    <a href="walmart://registry">walmart://registry</a>
+    <br>
+    </br>
+    <a href="walmart://stores">walmart://stores</a>
+    <br>
+    </br>
+    <a href="walmart://photos">walmart://photos</a>
+    <br>
+    </br>
+    <a href="walmart://easyreorder">walmart://easyreorder</a>
+    <br>
+    </br>
+    <a href="walmart://financialservices">walmart://financialservices</a>
+    <br>
+    </br>
+    <a href="walmart://financialservices/transactionhistory">walmart://financialservices/transactionhistory</a>
+    <br>
+    </br>
+    <a href="walmart://scanreceipt">walmart://scanreceipt</a>
+    <br>
+    </br>
+    <a href="walmart://backtoschool">walmart://backtoschool</a>
+    <br>
+    </br>
+    <a href="walmart://scanreceipt">walmart://scanreceipt</a>
+    <br>
+    </br>
   </body>
 </html>
