--- a/URIs.html
+++ b/URIs.html
@@ -94,7 +94,8 @@
     </br>
     <a href="walmart://webview/">walmart://webview/</a>
     <br>
-    </br>https%3A%2F%2Fwww.mparticle.com
+    </br>
+    <a href="walmart://webview/https%3A%2F%2Fwww.mparticle.com">walmart://webview/https%3A%2F%2Fwww.mparticle.com</a>
     <a href="walmart://lists">walmart://lists</a>
     <br>
     </br>
